--- a/Curso/ModeloWebPack/package.json
+++ b/Curso/ModeloWebPack/package.json
@@ -4,19 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack -w"
+    "dev": "webpack -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.12.16",
-    "@babel/core": "^7.12.16",
-    "@babel/preset-env": "^7.12.16",
+    "@babel/core": "^7.12.17",
+    "@babel/preset-env": "^7.12.17",
     "babel-loader": "^8.2.2",
-    "core-js": "^2.6.12",
-    "regenerator-runtime": "^0.13.7",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0"
+  },
+  "dependencies": {
+    "core-js": "^3.8.3",
+    "css-loader": "^5.0.2",
+    "regenerator-runtime": "^0.13.7",
+    "style-loader": "^2.0.0"
   }
 }
