--- a/Curso/ProjetoSenha/package.json
+++ b/Curso/ProjetoSenha/package.json
@@ -8,6 +8,7 @@
     "dev": "webpack -w"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.2.2",
     "core-js": "^3.8.3",
@@ -20,7 +21,8 @@
     "helmet": "^4.4.1",
     "mongoose": "^5.11.19",
     "regenerator-runtime": "^0.13.7",
-    "style-loader": "^2.0.0"
+    "style-loader": "^2.0.0",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.16",
